# coursework4_hh_vacancy

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  jsonsaver.py  utils.py  vacancy.py
tests/: test_api.py  test_utils.py  test_vacancy.py
